Arrumado os arquivos para visualizar no browser.

--- a/perfumaria/src/main/webapp/assets/css/style.css
+++ b/perfumaria/src/main/webapp/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Tirar depois que as telas estiverem prontas */
 .container-fluid {
-    background: red;
+    background: white;
 }
 .content {
     font-size: 200px;
