--- a/perfumaria/src/main/webapp/assets/css/style.css
+++ b/perfumaria/src/main/webapp/assets/css/style.css
@@ -70,3 +70,31 @@ body,
 .status {
     height: 59px !important;
 }
+#formlogin{
+    
+    text-align: center;
+       
+}
+#formlogin{
+
+width: 800px; 
+height: 650px; 
+left: 50%; 
+margin: -130px 0 0 -210px; 
+padding:250px;
+position: relative; 
+top: 50%;
+   
+}
+#formesquecersenha{
+    
+width: 800px; 
+height: 700px; 
+left: 50%; 
+margin: -130px 0 0 -210px; 
+padding:120px;
+position: relative; 
+top: 50%;
+    
+    
+}
