--- a/perfumaria/src/main/webapp/assets/css/style.css
+++ b/perfumaria/src/main/webapp/assets/css/style.css
@@ -31,7 +31,8 @@ body,
     padding: 10px 0px;
 }
 
-/* Tamanho mínimo da tela de login */
+/* Tamanho mínimo da tela de login e da sidebar */
+.sidebar, 
 .login {
     min-height: 485px;
 }
