Criado um estilo para bloquear campos do tipo select.

--- a/perfumaria/src/main/webapp/assets/css/style.css
+++ b/perfumaria/src/main/webapp/assets/css/style.css
@@ -84,3 +84,9 @@ body,
 #inserir-produto {
     margin-top: 25px;
 }
+
+select[readonly] {
+  background: #eee; /*Simular campo inativo*/
+  pointer-events: none;
+  touch-action: none;
+}
